--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,3 +1,6 @@
+$secret11_blue : #2980b9;
+
+
 @mixin profilePic {
     height: 40px;
     width: 40px;
@@ -22,6 +25,7 @@ textarea {
     @include textarea()
 }
 
+
 body {
     background: url('/dist/assets/planet-9.jpg');
     background-size: cover;
@@ -33,6 +37,10 @@ body {
     height: 100%;
     width: 100%;
 }
+
+input {
+    font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif!important;
+} 
 
 a {
     text-decoration: none!important;
@@ -76,13 +84,49 @@ a {
 
 .signup-item {
   font-size: 17px;
-  margin: 20px 0px;
+  margin: 40px 0px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  flex-direction: row-reverse;
+  width: 80vw;
+  transition: all 0.5s ease;
 
   &.input {
     border-bottom: 1px solid #f0f0f0;
+  }
+
+  label {
+    transition: all 0.5s ease;
+  }
+
+  &.submit {
+      justify-content: space-between;
+      a {
+          color : #999;
+      }
+  }
+
+  input {
+    font-size: 17px !important;
+    line-height: 34px;
+    padding: 10px 5px!important;
+    transition: all 0.5s ease;
+    width: calc(100% - 110px);
+
+      &:focus + label {
+          color: $secret11_blue;
+          transition: all 0.5s ease;
+
+          .fa {
+              transition: all 0.5s ease;
+              transform: rotate(360deg) scale(1.1);
+          }
+      }
+
+      &:not(:placeholder-shown) + label {
+            color: $secret11_blue;
+      }
   }
 }
 
@@ -1574,6 +1618,7 @@ header {
     padding: 10px 20px 10px 20px;
     text-decoration: none;
     display: inline-block;
+    border: none!important;
 
     &:hover {
         background: #3cb0fd;
